--- a/gastronomie/static/assets/css/login-register.css
+++ b/gastronomie/static/assets/css/login-register.css
@@ -189,15 +189,16 @@
     border-radius: 3px;
     background-color: rgba(0, 0, 0, 0.09);
     box-shadow: 0 1px 0px 0px rgba(0, 0, 0, 0.09) inset;
-    color: #FFFFFF;
+    color: #9E9E9E;
 }
 .login .form-control:hover{
     background-color: rgba(0,0,0,.16);
+    color: #9E9E9E;
 }
 .login .form-control:focus{
     box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.04) inset;
     background-color: rgba(0,0,0,0.23);
-    color: #FFFFFF;
+    olor: #9E9E9E;
 }
 .login .box .form input[type="text"], .login .box .form input[type="password"] {
     border-radius: 3px;
