--- a/gastronomie/static/assets/css/mdb.css
+++ b/gastronomie/static/assets/css/mdb.css
@@ -217,3 +217,7 @@ button.btn-floating {
     cursor: inherit;
     display: block;
 }
+
+.z-depth-1 {
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12)!important;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12)!importa
