--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,62 +1,47 @@
-{% extends "base.html" %}
+{% extends "recipe/recipe_box_user.html" %}
 {% load staticfiles %}
 {% load i18n %}
 {% load account %}
+{% load widget_tweaks %}
 
-{% block head_title %}{% trans "Set Password" %}{% endblock %}
+{% block head_title %}{% trans "Modifier le mot de passe" %}{% endblock %}
 
-{% block slide %}
-   
-<section id="home" class="home">
-    
-      <!--   <div class="overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 ">
-                        <div class="main_home_slider">
-                            <div class="single_home_slider">
-                                <div class="main_home wow"> -->
-                                    <!-- <h1>Cook' iT</h1> -->
-                                    <img src="{% static 'assets/images/food_1.jpg' %}">
-                                    <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
 
-                                    <div class="home_btn">
-                                        <a href="" class="btn btn-primary">LEARN MORE</a>
-                                    </div> -->
-<!-- 
-                                </div>
-                            </div>
-                            
-                            
-                        </div>
+{% block content_box_user %}
+    <div class="row padding-20">
+        <div class="col-lg-4">
+             <ul class="list-block">
+                <li>
+                    <a href=""> Profil</a>
+                </li>
+                <li>
+                    <a href="" class="active"> Mot de passe</a>
+                </li>
+                
+            </ul>
+        </div>
+        <div class="col-lg-4 content-left">    
+            
+		    <h4>{% trans "Modifier votre mot de passe" %}</h4>
+
+		    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+		        {% csrf_token %}
+		     
+                    <div class="form-group">
+                        {{ form.oldpassword|add_class:'form-control' }} 
+                        <span class="help-block">{{ form.oldpassword.error }}</span>
                     </div>
-                </div>
-            </div>
-        </div> -->
-    </section>
-{% endblock slide %}
-
-{% block header %}
-
-   
-{% endblock header %}
-
-
-{% block content_base %}
-<section class="portfolio">
-    <div class="container">                                 
-        <div class="row ">
-
-    		<div class="col-md-offset-2 col-md-8">
-			    <h1>{% trans "Modifier votre mot de passe" %}</h1>
-
-			    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-			        {% csrf_token %}
-			        {{ form.as_p|add_class:'form-control'}}
-			        <input type="submit" name="action" value="{% trans 'Valider' %}"/>
-			    </form>
-			</div>  
-        </div>  
+                    <div class="form-group">
+                        {{ form.password1|add_class:'form-control'}} 
+                        <span class="help-block">{{ form.password1.error }}</span>
+                    </div>
+                    <div class="form-group">
+                        {{ form.password2|add_class:'form-control'}} 
+                        <span class="help-block">{{ form.password2.error }}</span>
+                    </div>
+		        <input type="submit" class="btn btn-primary" name="action" value="{% trans 'Valider' %}"/>
+		    </form>
+        </div>
     </div>
-</section>   
-{% endblock %}
+			
+{% endblock content_box_user %}
