--- a/templates/recipe/video_publish_list.html
+++ b/templates/recipe/video_publish_list.html
@@ -106,7 +106,9 @@
                                 </div>
                             
                                 {% empty %}
-                                    <tr>Aucune vidéo pour le moment.</tr>
+                                    <tr>
+                                      <td colspan="6" class="text-center bg-warning">Aucune vidéo pour le moment.</td>
+                                    </tr>
                             {% endfor %}  
 
                         </tbody>
