--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -18,7 +18,7 @@
                               <div class="single_home_slider">
                                   <div class="main_home wow"> -->
                                       <!-- <h1>Cook' iT</h1> -->
-                                    <img src="{% static 'assets/images/top-image.jpg' %}">
+                                    <img src="{% static 'assets/images/top-recette.jpg' %}">
                                       <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
 
                                       <div class="home_btn">
