--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -13,7 +13,7 @@
    
 <section id="home" class="home">
     
-    <img src="{% static 'assets/images/food_1.jpg' %}">
+    <img src="{% static 'assets/images/top-recette.jpg' %}">
                                     
     </section>
 {% endblock slide %}
