--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -18,7 +18,7 @@
                             <div class="single_home_slider">
                                 <div class="main_home wow"> -->
                                     <!-- <h1>Cook' iT</h1> -->
-                                    <img src="{% static 'assets/images/top-blog.jpg' %}">
+                                    <img src="{% static 'assets/images/top-blog.jpg' %}" class="img-responsive">
                                     <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
 
                                     <div class="home_btn">
@@ -101,7 +101,15 @@
                     	 <p>{{post.text|safe|truncatewords:50}}</p>
                     	 <br>
                     	 <div class="pull-left ">
-                    		<i class="fa fa-tags"></i><strong>TAGS:</strong>
+                    		<i class="fa fa-tags"></i><strong>TAGS: </strong>
+                            
+                                {% for tag in post.tags.all %}
+
+                                <a href="/blog/tag/?tag={{ tag.name }}">{{tag.name}}</a>,
+
+        
+                                {% endfor %}
+                            
                     	</div>
 
                     </div>
