--- a/templates/recipe/recipe_add.html
+++ b/templates/recipe/recipe_add.html
@@ -25,7 +25,7 @@
 
             <form method="POST"  action="."  name="add-form" class="form-block" enctype="multipart/form-data">
                         {% csrf_token %}
-                        {{ form.media }}
+                      
             <div id="mixcontent" class="mixcontent row">
 
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
@@ -70,6 +70,8 @@
                                 <div class="col-xs-12 col-md-12 col-lg-12">
                                 <label for="id_title">{{form.origin.label}}:</label>
                                 {{ form.origin }}
+                                <span><a class="create-origin" title="Ajouter une ethnie" data-toggle="modal" data-target="#modal-book"><i class="fa fa-plus"></i></a></span>
+                                <br>
                                  <span class="helptext">{{ form.origin.help_text }}</span>
                             </div>
                             
@@ -134,7 +136,7 @@
                                     
                                      <label for="id_title">{{form.tags.label}}:</label>
                                     {{ form.tags }}
-                                    <span class="helptext">Séparer les tags par des virgules (,)</span>
+                                    <span class="helptext">Séparer les tags par des virgules (,) </span>
                             </div>
                                 </div>
                                 
@@ -157,6 +159,17 @@
         </div>
 
     </div>
+  
+
+
+    
+    <div class="modal fade" id="modal-book">
+        <div class="modal-dialog">
+          <div class="modal-content">
+          </div>
+        </div>
+    </div>
+
 
     <!-- <div class="main_mix_content padding">
 
@@ -190,8 +203,8 @@
     </div>
  -->
     <br>
-    <script src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
-    
+
+
 
 {% endblock %}
 
