--- a/templates/userprofile/test.html
+++ b/templates/userprofile/test.html
@@ -58,3 +58,26 @@
                 </div>
                 <!-- /#page-wrapper -->
             </div>
+
+
+
+
+            
+                      $("#modal-book").on("submit", ".js-origin-create-form", function () {
+                        var form = $(this);
+                        $.ajax({
+                          url: form.attr("action"),
+                          data: form.serialize(),
+                          type: form.attr("method"),
+                          dataType: 'json',
+                          success: function (data) {
+                            if (data.form_is_valid) {
+                              alert("Origin created!");  // <-- This is just a placeholder for now for testing
+                            }
+                            else {
+                              $("#modal-book .modal-content").html(data.html_form);
+                            }
+                          }
+                        });
+                        return false;
+                      });
